fix safari overflowing content

--- a/client/src/styles/card.scss
+++ b/client/src/styles/card.scss
@@ -12,6 +12,7 @@
   padding: $base-spacing-triple 0;
   flex-wrap: nowrap;
   width: 100%;
+  box-sizing: border-box;
 
   @media (min-width: $bp-bigSmartphone) {
     flex-direction: row;
